# robot_manipulation

./: README.md
baxter_common/: CHANGELOG.rst  LICENSE  README.rst
baxter_common/baxter_description/urdf/: baxter_pa.urdf.xacro  left_end_effector.urdf.xacro  right_end_effector.urdf.xacro
baxter_common/robots_description/: CMakeLists.txt  package.xml
baxter_common/robots_description/launch/: pa_demo_scene.launch  pa_demo_scene.rviz
baxter_common/robots_description/meshes/asus_xtion/: asus_xtion_pro_live.dae  asus_xtion_pro_live.stl  camera_base.dae  camera_base.stl  install_link.dae  install_link.stl
baxter_common/robots_description/meshes/table/: table.dae  table.stl
baxter_common/robots_description/robots/: robot_system_config.urdf
baxter_common/robots_description/urdf/asus_xtion/: asus_xtion.xacro
baxter_common/robots_description/urdf/table/: table.xacro  table.xacro~
baxter_demo/baxter_end_effector_control/: CMakeLists.txt  CMakeLists.txt~
baxter_demo/birl_recorded_motions/: CMakeLists.txt  package.xml  setup.py
baxter_demo/birl_recorded_motions/scripts/: example_goHome.py  example_goHomeLeft.py  example_goHomeRight.py  example_goNeutral.py  example_paHome_bothArms.py  example_paHome_rightArm.py  example_shutdown.py
baxter_demo/pa_demo/documentation/: snapAssembly-positionControlDemo_Instructions_001.docx
baxter_demo/pa_demo/launch/: pa_1.launch~  pa_2.launch  pa_2.launch~  pa_camera.launch  pa_camera.launch~  ppa.launch  ppa.launch~  pppa.launch~
baxter_demo/pa_localization/: CMakeLists.txt  package.xml  package.xml~
baxter_demo/pa_localization/msg/: pa_location.msg
baxter_demo/pa_localization/scripts/: fake_visual_info_pub.py  fake_visual_info_pub.py~  info_sub.py  table_pos_calibration.py  table_pos_calibration2.py  visual_localization.py  visual_localization.py~  visual_localization2.py  visual_localization3.py
baxter_demo/rbx1_nav/: CMakeLists.txt
baxter_simulator/baxter_gazebo/launch/: baxter_pa_world.launch  baxter_pa_world.launch~
baxter_simulator/baxter_gazebo/worlds/: baxter.world  (+1 more)
hand_design/original/: Base Down.SLDPRT  Base down_1.SLDPRT  ELECTRIC GRIPPER.SLDPRT  Top plate_1.SLDPRT  asseble.SLDASM  box_female.SLDPRT  box_male.SLDPRT  femaleHolder1.SLDPRT  gripper.SLDASM  gripper.SLDPRT  gripper.STL  link_1.SLDPRT  maleHolder.SLDPRT  state_3_finger_original_1.SLDPRT  state_3_top_plate.SLDPRT  state_5_top_plate.SLDPRT
kinematics/baxter_kinematics/: CMakeLists.txt  package.xml~  setup.py
kinematics/trac_ik/trac_ik_baxter/: CMakeLists.txt  README.md  package.xml
kinematics/trac_ik/trac_ik_baxter/launch/: ik_server.launch  ik_server.launch~
kinematics/trac_ik/trac_ik_baxter/src/: ik_server.cpp
kinematics/trac_ik/trac_ik_baxter/srv/: GetConstrainedPositionIK.srv
(+63 files in other folders)
