<?xml version="1.0"?>
<package>
  <name>robots_description</name>
  <version>0.1.0</version>
  <description>
    Description of PA demo scene, using Baxter Research Robot from Rethink Robotics and
    a self-modified gripper. This package contains the URDF and meshes describing this robot system.
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <maintainer email="hao.deng@siat.ac.cn">
    Hao Deng, SIAT
  </maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>baxter_description</run_depend>
  <run_depend>rethink_ee_description</run_depend>

</package>
