<?xml version="1.0"?>
<package>
  <name>trac_ik_baxter</name>
  <version>1.0.0</version>
  <description> Simple overlay to the trac_ik package for Baxter </description>
  <maintainer email="yoan.mollard@inria.fr">Yoan Mollard</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>trac_ik_lib</build_depend> 
  <run_depend>trac_ik_lib</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
